# VHACDUnity4

./: .gitignore  README.md
UnityVHACD/UnityVHACD/Assets/Plugins/: libUnityVHACD.bundle
UnityVHACD/UnityVHACD/Assets/Scenes/: SampleScene.unity
UnityVHACD/UnityVHACD/Assets/UnityVHACD/: IUnityVhacd.cs  Mesh.mat  TestVHACD.cs  UnityVhacd.cs  Vhacd.asmdef  VhacdConvexHull.cs  VhacdDemo.cs  VhacdParameters.cs  VhacdTriangle.cs  VhacdVertex.cs
UnityVHACD/UnityVHACD/Assets/UnityVHACD/Tests/: UnityVHACD.Tests.asmdef  VhacdTests.cs
UnityVHACD/UnityVHACD/ProjectSettings/: ProjectSettings.asset
dll/: CMakeLists.txt  UnityVHACD.cpp  UnityVHACD.h
dll/iosBuild/Release-iphoneos/: libUnityVHACD.dylib
dll/iosBuild/UnityVHACD.xcodeproj/: project.pbxproj
